# timestamper-python

./: .pre-commit-config.yaml  README.md  captions.py  chapters.py  cli.py  main.py  pyproject.toml  requirements.txt  timestamper.py  titles.py  utils.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  format.yml  lint.yml  typecheck.yml
